# Project_Vermillion

./: CMakeLists.txt  README.md
src/: main.cpp
src/Trackers/: PerformanceTracking.cpp  PerformanceTracking.h  PerformanceTracking_Linux.cpp  PerformanceTracking_Windows.cpp  PerformanceTracking_macOS.cpp
src/game/: GameState.cpp  GameState.h  MenuManager.cpp  MenuManager.h  PlayerController.cpp  PlayerController.h
src/render/: GameRenderer.cpp  GameRenderer.h  MenuRenderer.cpp  MenuRenderer.h
